add color generator for ent visualization

--- a/notebooks/01_spacy_pipeline.ipynb
+++ b/notebooks/01_spacy_pipeline.ipynb
@@ -131,9 +131,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x111b64e80>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x111cfd288>),\n",
-       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x111cfd2e8>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
+       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x2b0a2997ca8>)]"
       ]
      },
      "execution_count": 5,
@@ -244,9 +244,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x111b64e80>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x111cfd288>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x111a4bfd0>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x2b0914eb978>)]"
       ]
      },
      "execution_count": 11,
@@ -376,10 +376,10 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x111b64e80>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x111cfd288>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x111a4bfd0>),\n",
-       " ('context', <cycontext.context_component.ConTextComponent at 0x112be7588>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x2b0914eb978>),\n",
+       " ('context', <cycontext.context_component.ConTextComponent at 0x2b0914eb898>)]"
       ]
      },
      "execution_count": 18,
@@ -433,13 +433,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using the visualization module, colors can be optionally supplied to the `colors` argument of `visualize_ent`. If left to `None`, a color cycle will be generated using the default matplotlib colors. However, we can also define them manually:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cycontext import viz\n",
-    "colors ={\"DEFINITE_NEGATED_EXISTENCE\": \"#34b1eb\",\n",
+    "colors = {\"DEFINITE_NEGATED_EXISTENCE\": \"#34b1eb\",\n",
     "                          \"INDICATION\": \"yellow\",\n",
     "                           \"HISTORICAL\": \"#ddb8f5\",\n",
     "                          \"CONDITION\": \"orange\"}"
@@ -447,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +563,7 @@
     {
      "data": {
       "text/html": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"067b2d9c29a4469dbc46640267b647c1-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"dd6a2efe39ac477bbe28bdca06ef98bb-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">PMH</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
@@ -578,9 +585,9 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-067b2d9c29a4469dbc46640267b647c1-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-dd6a2efe39ac477bbe28bdca06ef98bb-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-067b2d9c29a4469dbc46640267b647c1-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-dd6a2efe39ac477bbe28bdca06ef98bb-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -622,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
