--- a/notebooks/02_Modifiers.ipynb
+++ b/notebooks/02_Modifiers.ipynb
@@ -216,6 +216,7 @@
        " '__init__',\n",
        " '__init_subclass__',\n",
        " '__le__',\n",
+       " '__len__',\n",
        " '__lt__',\n",
        " '__module__',\n",
        " '__ne__',\n",
@@ -368,7 +369,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.matcher.Matcher at 0x10fa4d8c8>"
+       "<spacy.matcher.matcher.Matcher at 0x23351dbaec8>"
       ]
      },
      "execution_count": 18,
@@ -388,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x111cbe748>"
+       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x233633ed898>"
       ]
      },
      "execution_count": 19,
@@ -1100,9 +1101,9 @@
       "text/plain": [
        "{'metadata': None,\n",
        " 'literal': 'has been ruled out',\n",
-       " 'category': 'DEFINITE_NEGATED_EXISTENCE',\n",
+       " 'rule': 'BACKWARD',\n",
        " 'pattern': None,\n",
-       " 'rule': 'BACKWARD'}"
+       " 'category': 'DEFINITE_NEGATED_EXISTENCE'}"
       ]
      },
      "execution_count": 57,
@@ -1141,7 +1142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'item_data': [{'metadata': None, 'literal': 'are ruled out', 'category': 'DEFINITE_NEGATED_EXISTENCE', 'pattern': None, 'rule': 'BACKWARD'}, {'metadata': None, 'literal': 'be ruled out', 'category': 'INDICATION', 'pattern': None, 'rule': 'BACKWARD'}]}\n"
+      "{'item_data': [{'metadata': None, 'literal': 'are ruled out', 'rule': 'BACKWARD', 'pattern': None, 'category': 'DEFINITE_NEGATED_EXISTENCE'}, {'metadata': None, 'literal': 'be ruled out', 'rule': 'BACKWARD', 'pattern': None, 'category': 'INDICATION'}]}\n"
      ]
     }
    ],
@@ -1175,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
