--- a/notebooks/01_spacy_pipeline.ipynb
+++ b/notebooks/01_spacy_pipeline.ipynb
@@ -102,7 +102,7 @@
     "texts = [\n",
     "    \"There is no evidence of pneumonia.\",\n",
     "    \"rule out pna\",\n",
-    "    \"PMH OF PE.\",\n",
+    "    \"HISTORY OF PE.\",\n",
     "]"
    ]
   },
@@ -111,7 +111,7 @@
    "metadata": {},
    "source": [
     "# Load Model\n",
-    "We start by loading a standard spaCy model which comes with a standard processing pipeline:"
+    "We start by loading a standard spaCy model which comes with a standard processing pipeline. However, we'll remove the standard `ner` model since we'll be defining our own entity classes."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = spacy.load(\"en_core_web_sm\")"
+    "nlp = spacy.load(\"en_core_web_sm\", disable=\"ner\")"
    ]
   },
   {
@@ -131,9 +131,8 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
-       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x2b0a2997ca8>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x10faa3f98>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x10fc417c8>)]"
       ]
      },
      "execution_count": 5,
@@ -170,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ruler = EntityRuler(nlp, overwrite_ents=True)"
+    "ruler = EntityRuler(nlp, overwrite_ents=True, phrase_matcher_attr=\"LOWER\")"
    ]
   },
   {
@@ -182,15 +181,15 @@
     "target_patterns = [\n",
     "    {\n",
     "        'label': 'CONDITION',\n",
-    "        'pattern': [{\"LOWER\": \"pneumonia\"}]\n",
+    "        'pattern': \"pneumonia\"\n",
     "    },\n",
     "    {\n",
     "        'label': 'CONDITION',\n",
-    "        'pattern': [{\"LOWER\": \"pna\"}]\n",
+    "        'pattern': \"pna\"\n",
     "    },\n",
     "    {\n",
     "        'label': 'CONDITION',\n",
-    "        'pattern': [{\"TEXT\": \"PE\"}]\n",
+    "        'pattern': \"PE\"\n",
     "    },\n",
     "]"
    ]
@@ -215,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this will replace spaCy's built-in NER model, we can remove the NER model completely from the pipeline:"
+    "And then add this to our pipeline:"
    ]
   },
   {
@@ -224,32 +223,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = nlp.remove_pipe(\"ner\")"
+    "nlp.add_pipe(ruler, last=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp.add_pipe(ruler, last=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x2b0914eb978>)]"
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x10faa3f98>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x10fc417c8>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x10f9b5c88>)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -315,23 +305,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then instantiate our ConTextComponent with the default rules:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context = ConTextComponent(nlp, rules=\"default\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_data = [\n",
-    "    ConTextItem(\"no evidence of\", category=\"DEFINITE_NEGATED_EXISTENCE\", rule=\"forward\"),\n",
-    "    ConTextItem(\"rule out\", category=\"INDICATION\", rule=\"forward\"),\n",
-    "    ConTextItem(\"PMH\", category=\"HISTORICAL\", rule=\"forward\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We then instantiate our ConTextComponent and add the item data:"
+    "# item_data = [\n",
+    "#     ConTextItem(\"no evidence of\", category=\"DEFINITE_NEGATED_EXISTENCE\", rule=\"forward\"),\n",
+    "#     ConTextItem(\"rule out\", category=\"INDICATION\", rule=\"forward\"),\n",
+    "#     ConTextItem(\"Past Medical History\", category=\"HISTORICAL\", rule=\"forward\")\n",
+    "# ]"
    ]
   },
   {
@@ -340,16 +339,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = ConTextComponent(nlp)"
+    "# context.add(item_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'FAMILY',\n",
+       " 'HISTORICAL',\n",
+       " 'HYPOTHETICAL',\n",
+       " 'NEGATED_EXISTENCE',\n",
+       " 'POSSIBLE_EXISTENCE'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "context.add(item_data)"
+    "context.categories"
    ]
   },
   {
@@ -361,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,23 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x2b0a2852f28>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x2b0a2997c48>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x2b0914eb978>),\n",
-       " ('context', <cycontext.context_component.ConTextComponent at 0x2b0914eb898>)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nlp.pipeline"
    ]
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,22 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[pneumonia] is modified by [<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]]\n",
-      "\n",
-      "[pna] is modified by [<TagObject> [rule out, INDICATION]]\n",
-      "\n",
-      "[PE] is modified by [<TagObject> [PMH, HISTORICAL]]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for doc in docs:\n",
     "    for target, modifier in doc._.context_graph.edges:\n",
@@ -441,45 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cycontext import viz\n",
-    "colors = {\"DEFINITE_NEGATED_EXISTENCE\": \"#34b1eb\",\n",
-    "                          \"INDICATION\": \"yellow\",\n",
+    "colors = {\"NEGATED_EXISTENCE\": \"#34b1eb\",\n",
+    "                          \"POSSIBLE_EXISTENCE\": \"yellow\",\n",
     "                           \"HISTORICAL\": \"#ddb8f5\",\n",
     "                          \"CONDITION\": \"orange\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">There is \n",
-       "<mark class=\"entity\" style=\"background: #34b1eb; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    no evidence of\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">DEFINITE_NEGATED_EXISTENCE</span>\n",
-       "</mark>\n",
-       " \n",
-       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    pneumonia\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
-       "</mark>\n",
-       ".</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "viz.visualize_ent(docs[0], \n",
     "                  colors=colors\n",
@@ -488,32 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
-       "<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    rule out\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">INDICATION</span>\n",
-       "</mark>\n",
-       " \n",
-       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    pna\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
-       "</mark>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "viz.visualize_ent(docs[1], \n",
     "                  colors=colors\n",
@@ -522,32 +463,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
-       "<mark class=\"entity\" style=\"background: #ddb8f5; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    PMH\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">HISTORICAL</span>\n",
-       "</mark>\n",
-       " OF \n",
-       "<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    PE\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">CONDITION</span>\n",
-       "</mark>\n",
-       ".</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cycontext import viz\n",
     "viz.visualize_ent(docs[2], \n",
@@ -557,50 +475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"dd6a2efe39ac477bbe28bdca06ef98bb-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">PMH</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\"></tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">OF</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\"></tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"400\">PE</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"400\">CONDITION</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"575\">.</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"575\"></tspan>\n",
-       "</text>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-dd6a2efe39ac477bbe28bdca06ef98bb-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-dd6a2efe39ac477bbe28bdca06ef98bb-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">HISTORICAL</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "viz.visualize_dep(docs[2])"
    ]
@@ -629,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
